# devops-engineer-from-scratch-project-313

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  nginx.conf  package-lock.json  pyproject.toml
.github/workflows/: main.yml
app/: database.py  main.py  models.py  repository.py  routes.py
tests/: test_api.py  test_main.py
