[project]
name = "devops-engineer-from-scratch-project-313"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "sentry-sdk>=2.58.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
